<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Find Your Camp</string>
    <string name="action_settings">Einstellungen</string>

    <string name="pref_notifications">Benachrichtigungen</string>
    <string name="pref_notifications_summary">Benachrichtigungen aktivieren.</string>

	<string name="action_insert_rental_property">Mietobjekt anlegen</string>
	<string name="action_request_rental_property">Mietobjekt suchen</string>
	<string name="action_registration">Registrierung</string>
	<string name="action_single_rental_property">Mietobjekt ansehen</string>
	<string name="action_list_rental_properties">Deine Mietobjekte</string>
	<string name="action_response_rental_property">Mietobjekt mieten</string>
	<string name="action_share_rental_property">Mietobjekt freigeben</string>

	<string name="rental_property_location_hint">Location</string>
	<string name="rental_property_section_title_location">Ort</string>
	<string name="rental_property_section_title_features">Ausstattung</string>
	<string name="rental_property_section_title_place_size">Platzgröße</string>
	<string name="rental_property_section_title_group_size">Anzahl Personen</string>

	<string name="rental_property_toilets_available">Toiletten verfügbar</string>
	<string name="rental_property_bbq_allowed">BBQ erlaubt</string>
	<string name="rental_property_internet_available">Internet verfügbar</string>
	<string name="rental_property_carparking_possible">Parkplatz vorhanden</string>
	<string name="rental_property_children_allowed">Kinder gestattet</string>
	<string name="rental_property_supermarket_nearby">Supermarkt in der Nähe</string>
	<string name="rental_property_public_transport_nearby">Öffentliche Verkehrmittel in der Nähe</string>
	<string name="rental_property_shower_bath_available">Dusche vorhanden</string>
	<string name="rental_property_water_provided">Wasseranschluss vorhanden</string>
	<string name="rental_property_tents_provided">Zelte vorhanden</string>
	<string name="rental_property_power_provided">Strom vorhanden</string>
	<string name="rental_property_dogs_allowed">Hunde erlaubt</string>
	<string name="rental_property_caravan_parking_possible">Wohnwagenplatz vorhanden</string>
	<string name="rental_property_campfire_allowed">Lagerfeuer gestattet</string>

	<string name="rental_property_section_title_price">Preis</string>
	<string name="rental_property_section_title_price_range_feedback">Zwischen %1$s und %2$s pro Tag</string>
	<string name="rental_property_section_title_price_feedback">%1$s pro Tag</string>

	<string name="rental_property_button_save">Anlegen</string>
	<string name="rental_property_button_search">Suchen</string>

	<string name="insert_rental_property_success_dialog_title">Mietobjekt lokal angelegt</string>
	<string name="insert_rental_property_success_dialog_message">Das Mietobjekt wird nun online registriert.\nDie Mietobjekt jetzt aufrufen?</string>
	<string name="insert_rental_property_success_dialog_yes">Ja</string>
	<string name="insert_rental_property_success_dialog_back">Zur Startseite</string>

	<string name="action_bar_rental_property_requests">Mietanfragen</string>
	<string name="action_bar_search_requests">Mietanfragen</string>

	<string name="registration_hint">Registriere dich jetzt und starte los…</string>
	<string name="registration_user_name_hint">Benutzername</string>
	<string name="registration_user_email_hint">E-Mail Adresse</string>
	<string name="registration_user_password_hint">Passwort</string>
	<string name="registration_user_button_register">Registrieren</string>

	<string name="main_welcome_message">Willkommen zurück, starte jetzt eine neue Suche oder leg ein neues Mietobjekt an.</string>
	<string name="main_registration_message">Hallo, bitte registriere dich!</string>
	<string name="main_registerd_message">Hallo %$1s, danke für deine Registrierung. Starte jetzt eine neue Suche oder leg ein neues Mietobjekt an.</string>

	<string name="share_rental_property">Freigeben</string>

    <string-array name="rental_property_group_size_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="rental_property_place_size_array">
        <item>5m²</item>
        <item>10m²</item>
        <item>15m²</item>
        <item>20m²</item>
    </string-array>


    <string name="no_local_rental_properties">Du bietest noch keine Mietobjekte an!</string>
</resources>
