<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
    android:padding="10dp"
	android:orientation="vertical" >

	<TextView
		android:id="@+id/registration_hint"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/registration_hint"
		android:layout_marginBottom="20dp"
		android:textAppearance="?android:attr/textAppearanceMedium" />

	<EditText
		android:id="@+id/registration_user_name"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:ems="10"
		android:hint="@string/registration_user_name_hint"
		android:inputType="textPersonName" >

		<requestFocus />
	</EditText>

	<EditText
		android:id="@+id/registration_user_email"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:ems="10"
		android:hint="@string/registration_user_email_hint"
		android:inputType="textEmailAddress" />

	<EditText
		android:id="@+id/registration_user_password"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:ems="10"
		android:hint="@string/registration_user_password_hint"
		android:inputType="textPassword" />

	<Button
	    android:id="@+id/registration_user_button_register"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/registration_user_button_register"
	    android:onClick="onButtonClicked" />

</LinearLayout>
